<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kamyabi.cash.tasks.ui.HomeFragment"
        android:label="@string/nav_home">
        <action
            android:id="@+id/action_home_to_gaming"
            app:destination="@id/nav_gaming" />
    </fragment>

    <fragment
        android:id="@+id/nav_team"
        android:name="com.kamyabi.cash.team.ui.TeamFragment"
        android:label="@string/nav_team" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.kamyabi.cash.wallet.ui.WalletFragment"
        android:label="@string/nav_wallet">
        <action
            android:id="@+id/action_wallet_to_withdraw"
            app:destination="@id/withdrawFragment" />
        <action
            android:id="@+id/action_wallet_to_transfer"
            app:destination="@id/transferFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.kamyabi.cash.auth.ui.ProfileFragment"
        android:label="@string/nav_profile">
        <action
            android:id="@+id/action_profile_to_bank"
            app:destination="@id/bankBindingFragment" />
        <action
            android:id="@+id/action_profile_to_task_history"
            app:destination="@id/taskHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/withdrawFragment"
        android:name="com.kamyabi.cash.wallet.ui.WithdrawFragment"
        android:label="@string/withdraw_title" />

    <fragment
        android:id="@+id/transferFragment"
        android:name="com.kamyabi.cash.wallet.ui.TransferFragment"
        android:label="Transfer Coins" />

    <fragment
        android:id="@+id/nav_gaming"
        android:name="com.kamyabi.cash.gaming.ui.GamingFragment"
        android:label="@string/nav_gaming" />

    <fragment
        android:id="@+id/tierTasksFragment"
        android:name="com.kamyabi.cash.tasks.ui.TierTasksFragment"
        android:label="Tasks">
        <argument
            android:name="tier"
            app:argType="string"
            android:defaultValue="SILVER" />
    </fragment>

    <fragment
        android:id="@+id/bankBindingFragment"
        android:name="com.kamyabi.cash.wallet.ui.BankBindingFragment"
        android:label="Bank Binding" />

    <fragment
        android:id="@+id/taskHistoryFragment"
        android:name="com.kamyabi.cash.wallet.ui.TaskHistoryFragment"
        android:label="Task Record" />

</navigation>
